# HW5_web

./: README.md  main.py  pyproject.toml  requirements.txt  web_server.py
