[tool.poetry]
name = "hw5-web"
version = "0.1.0"
description = ""
authors = ["BogSyn <ravlykplus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
websockets = "^12.0"
names = "^0.3.0"
aiopath = "0.6.11"
aiofile = "3.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
